...
                    .environmentObject(viewModel)
                    .accessibility(identifier: "filterView")
                ListView(isPresentingAddItemView: $isPresentingAddItemView,
                                         todoItemDescription: $todoItemDescription,
                                         itemToEdit: $itemToEdit)
                                    .environmentObject(viewModel)
                                    .accessibility(identifier: "listView")
            }
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    AddItemView()
                        .environmentObject(viewModel)
                        .accessibility(identifier: "addItemView")
                }
            }
            .onAppear {
                getTodoList(userId: "3")
            }
            .sheet(item: $itemToEdit) { item in
...
