...
                        .padding(.horizontal, 20)
                        .accessibility(identifier: "cancelButton")
                        Spacer()
                    }
                }
            }
            .navigationBarTitle("Edit Todo Item", displayMode: .inline)
            .onAppear {
                todoItemDescription = item.title ?? ""
            }
        }
    }
}
...
