...
                    Button(action: {
                        viewModel.receive(event: .toggleItem(item: item))
                    }) {
                        Image(systemName: item.completed ? "checkmark.square" : "square")
                            .foregroundColor(item.completed ? .green : .gray)
                    }
                    .accessibility(identifier: "toggleButton")

                    Text(item.title ?? "")
                        .strikethrough(item.completed)
                        .foregroundColor(item.completed ? .gray : .black)
                        .accessibility(identifier: "itemTitle")

...
                        itemToEdit = item
                        isPresentingAddItemView.toggle()
                    }) {
                        Image(systemName: "pencil")
                    }
                    .buttonStyle(PlainButtonStyle())
                    .accessibility(identifier: "editButton")
                }
            }
            .onDelete(perform: deleteItem)
        }
        .accessibility(identifier: "itemList")
    }
...
